# vira

./: .cursorrules  .gitignore  .pre-commit-config.yaml  AlignOrGap improvement.md  CHAINLIT_IMPLEMENTATION_SUMMARY.md  CHAINLIT_QUICKSTART.md  Capstone Outputs per Iteration.md  Claude RAG pipeline plan v1.md  DOCUMENTATION_PROJECT_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  ITERATION2_IMPLEMENTATION_SUMMARY.md  ITERATION2_QUICKSTART.md  Iter1&2-ARCHITECTURE_VISUAL.md  Iter1-V1_TO_V2_CHANGES.md  Iter1RAG.md  Iter2Agents.md  Iter3Agents.md  NEW_SESSION_FLOW.md  PROTOTYPE_IMPLEMENTATION_SUMMARY.md  PipelineDesign-v1.md  QUICKSTART.md  REACT_MIGRATION_COMPLETE.md  README.md  REVERSAL_COMPLETE.md  TESTING_CHECKLIST.md  UI_COMPARISON.md  UX_IMPROVEMENTS.md  VIRA-Iter1 Chainlit-Arch v1.md  VIRA-Iter1Arch_Impl_v1.md  VIRA-Iteration2-phases.md  VIRA_MVP_Architecture_Plan_v0.md  clear_sessions.sh  pyproject.toml  start_all.sh  start_chainlit_ui.sh  start_react_stack.sh  start_services.sh  stop_all.sh
.chainlit/: config.toml
.cursor/: DEVELOPMENT_PHASES.md  QUICKSTART.md  RULES_IMPLEMENTATION_SUMMARY.md  RULES_SIMPLIFICATION_COMPLETE.md  RULE_MAINTENANCE.md  cursorrules-compact.md
bizplans/: business_plan_10_wedding_planning.txt  business_plan_11_ai_property_mgmt.txt  business_plan_12_ai_accounting.txt  business_plan_13_ai_restaurants.txt  business_plan_14_ai_medical_admin.txt  business_plan_15_ai_home_services.txt  business_plan_16_solar_installation.txt  business_plan_17_modular_construction.txt  business_plan_18_ev_charging.txt  business_plan_19_building_retrofit.txt  business_plan_1_ai_saas.txt  business_plan_20_datacenter_construction.txt  business_plan_2_ghost_kitchen.txt  business_plan_3_sustainable_fashion.txt  business_plan_4_cybersecurity.txt  business_plan_5_vertical_farming.txt  business_plan_6_coffee_roastery.txt  business_plan_7_fitness_studio.txt  (+2 more)
config/: crawl_settings.yaml  (+1 more)
(+118 files in other folders)
